--- a/CRUD_Project.dproj
+++ b/CRUD_Project.dproj
@@ -138,7 +138,7 @@
         <DCCReference Include="uTurmas.pas"/>
         <DCCReference Include="uMatriculas.pas"/>
         <DCCReference Include="uLogin.pas"/>
-        <DCCReference Include="uCargos.pas"/>
+        <DCCReference Include="uInformações.pas"/>
         <BuildConfiguration Include="Base">
             <Key>Base</Key>
         </BuildConfiguration>
