Responsividade da tela cheia feita(TELA DE LOGIN)

--- a/CRUD_Project.dproj
+++ b/CRUD_Project.dproj
@@ -124,7 +124,7 @@
             <MainSource>MainSource</MainSource>
         </DelphiCompile>
         <DCCReference Include="CRUD.pas">
-            <Form>Form1</Form>
+            <Form>Login</Form>
             <FormType>dfm</FormType>
         </DCCReference>
         <DCCReference Include="uDM.pas">
