--- a/CRUD_Project.dproj
+++ b/CRUD_Project.dproj
@@ -142,6 +142,8 @@
         <DCCReference Include="uCadastro.pas"/>
         <DCCReference Include="uEstudantesDAO.pas"/>
         <DCCReference Include="uProfessoresDAO.pas"/>
+        <DCCReference Include="uLoginDAO.pas"/>
+        <DCCReference Include="uCadastroDAO.pas"/>
         <BuildConfiguration Include="Base">
             <Key>Base</Key>
         </BuildConfiguration>
